maybe this fixes odd scrollbars

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -67,6 +67,7 @@ pre-header {
 	font-family: monospace;
 	display: block;
 	overflow-x: auto;
+	overflow-y: none;
 	font-weight: normal;
 	background-color: $grey-color-light;
 	border: 1px solid $grey-color-light;
